[gd_scene load_steps=4 format=3 uid="uid://bl45juqd8ev6t"]

[ext_resource type="Script" path="res://Entities/Player/land_shockwave.gd" id="1_a1ohv"]
[ext_resource type="PackedScene" uid="uid://dq2bvxx4uwj36" path="res://Entities/Player/land_shockwave_effect.tscn" id="2_fh6kw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3kw1n"]
radius = 32.0

[node name="LandShockwave" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_a1ohv")

[node name="Polygon2D" type="Polygon2D" parent="."]
modulate = Color(1, 1, 1, 0.227451)
color = Color(1, 0.51, 0.51, 1)
polygon = PackedVector2Array(-32, 0, -24, -24, 0, -32, 24, -24, 32, 0, 24, 24, 0, 32, -24, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3kw1n")

[node name="LandShockwaveEffect" parent="." instance=ExtResource("2_fh6kw")]
position = Vector2(16, 0)

[node name="LandShockwaveEffect2" parent="." instance=ExtResource("2_fh6kw")]
position = Vector2(-16, 0)
direction = Vector2(-1, -0.2)
angular_velocity_min = -200.0
angular_velocity_max = -20.0
orbit_velocity_min = -0.4
orbit_velocity_max = -0.2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="finished" from="LandShockwaveEffect2" to="." method="_on_land_shockwave_effect_2_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
